add rounding for bus value

--- a/templates/map/popup.html
+++ b/templates/map/popup.html
@@ -15,5 +15,6 @@
                     {% else %}
                         N/A
                     {% endif %} <br/>
+        Timestamp: {{ bus.gps_timestamp }} <br/>
 {% endif %}
 
